# nbis-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  build_android.sh  build_python_bindings.sh  patch_maturin_wheel.sh  pyproject.toml
.github/workflows/: ci-develop.yml  ci.yaml
bindings/android/: settings.gradle.kts
bindings/android/app/: build.gradle.kts
bindings/android/app/src/androidTest/java/ai/seventhsense/sdk/nbis/: ExampleInstrumentedTest.kt
bindings/android/app/src/androidTest/java/com/sensecrypt/sdk/nbis/: ExampleInstrumentedTest.kt
bindings/android/app/src/main/: AndroidManifest.xml
bindings/android/app/src/main/java/com/sensecrypt/sdk/: .gitignore
bindings/android/app/src/test/java/ai/seventhsense/sdk/nbis/: ExampleUnitTest.kt
bindings/android/app/src/test/java/com/sensecrypt/sdk/nbis/: ExampleUnitTest.kt
bindings/python/nbis-py/: README.md
bindings/python/tests/: README.md  requirements.txt  test_nbis.py
ext/nbis/bozorth/src/lib/bozorth3/: bozorth_glue.c
ext/nbis/commonbis/include/: f2c.h  memalloc.h  usebsd.h  util.h
ext/nbis/commonbis/src/lib/cblas/: lsame.c  sgemv.c  xerbla.c
ext/nbis/commonbis/src/lib/ioutil/: dataio.c  fileexst.c  filehead.c  fileroot.c  filesize.c  filetail.c  findfile.c  newext.c  readutil.c
ext/nbis/commonbis/src/lib/util/: memalloc.c  ssxstats.c
ext/nbis/imgtools/include/: dataio.h  ioutil.h  swap.h
ext/nbis/mindtct/include/: lfs.h
ext/nbis/misc/sivv/include/: SIVVCore.h  fingerprint_wrapper.h
ext/nbis/misc/sivv/src/: SIVVCore.cpp  SIVVGraph.cpp  sivv_wrapper.cpp
ext/nbis/nfiq/include/: nfiq.h
ext/nbis/pcasys/include/: mlpcla.h
ext/nbis/pcasys/src/lib/mlp/: acs.c  mlpcla.c  runmlp.c
ext/opencv-2.4.13.6/modules/flann/include/opencv2/flann/: kdtree_index.h  lsh_index.h  random.h
src/: api.rs  bozorth.rs  consts.rs  encoding.rs  errors.rs  ffi.rs  imutils.rs  lib.rs  minutia.rs  minutiae.rs
