[package]
name = "nbis-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "nbis" 

[build-dependencies]
cc = "1.2.27"
uniffi = { version = "0.29.3", features = ["build"] }

[dependencies]
image = "0.25.6"
imageproc = "0.25.0"
libc = "0.2.174"
thiserror = "2.0.12"
uniffi = { version = "0.29.3", features = ["cli"] }

