[package]
name = "nbis-rs"
version = "0.1.2"
edition = "2021"

authors = ["Varun Chatterji <varun@seventhsense.ai>"]
description = "A Rust binding to the NIST Biometric Image Software (NBIS) library, which is used for processing biometric images, particularly in the context of fingerprint recognition"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Seventh-Sense-Artificial-Intelligence/nbis-rs"
homepage = "https://github.com/Seventh-Sense-Artificial-Intelligence/nbis-rs"
documentation = "https://docs.rs/nbis-rs"
keywords = ["biometrics", "fingerprint", "nbis"]
categories = ["algorithms", "api-bindings"]

# Optional but recommended:
exclude = ["/.github", "/examples", "test_data", "scripts"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "nbis" 

[build-dependencies]
cc = "1.2.27"
uniffi = { version = "0.29.3", features = ["build"] }

[dependencies]
image = "0.25.6"
imageproc = "0.25.0"
libc = "0.2.174"
once_cell = "1.21.3"
thiserror = "2.0.12"
uniffi = { version = "0.29.3", features = ["cli"] }

